--- a/index.html
+++ b/index.html
@@ -1,1 +1,5 @@
-Placeholder Wapichanao website http://www.wapichanao.org/
+<html>
+  <body>
+    Placeholder Wapichanao website http://www.wapichanao.org/
+  </body>
+</html>
